--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /Pertemuan 9/jfc_mvc/build/
 /PERTEMUAN_11_MVC/PERTEMUAN_11_MVC/MVC/build/
 /PERTEMUAN_11_MVC/PERTEMUAN_11_MVC/MVC/nbproject/private/
+/Pertemuan 12/MVC/nbproject/private/
