--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@
 /Pertemuan 11/jfc_mvc/build/
 /studycasus2/studycasus2/nbproject/private/
 /studycasus2/studycasus2/build/
+/pertemuan13/MainFrame/build/
+/pertemuan13/MainFrame/nbproject/private/
+/jfc_konkurensi/jfc_konkurensi/build/
+/jfc_konkurensi/jfc_konkurensi/nbproject/private/
